# grid_py

./: .gitattributes  .gitignore  README.md  pyproject.toml
grid_py/: __init__.py  _colour.py  _coords.py  _curve.py  _display_list.py  _draw.py  _font_metrics.py  _gpar.py  _grob.py  _layout.py  _patterns.py  _renderer_base.py  _scene_graph.py  _size.py  _state.py  _units.py  _utils.py  _vp_calc.py  renderer.py  renderer_web.py
grid_py/resources/: gridpy-heatmap.css  gridpy-heatmap.js  gridpy.css  gridpy.js
tests/: test_coords.py  test_coverage_arrow.py  test_coverage_clippath.py  test_coverage_coords.py  test_coverage_curve.py  test_coverage_display_list.py  test_coverage_draw2.py  test_coverage_draw2_extra.py  test_coverage_edit.py  test_coverage_gaps.py  test_coverage_grab.py  test_coverage_grab2.py  test_coverage_grob2.py  test_coverage_group.py  test_coverage_highlevel2.py  test_coverage_init_gpar.py  test_coverage_just.py  test_coverage_ls.py  test_coverage_mask.py  test_coverage_path.py  test_coverage_patterns.py  test_coverage_primitives2.py  test_coverage_size.py  test_coverage_state.py  test_coverage_transforms.py  test_coverage_typeset.py  test_coverage_units2.py  test_coverage_utils.py  test_coverage_viewport2.py  test_curve_metrics.py  test_draw.py  test_fill_stroke_grobs.py  test_gpar.py  test_gradient_pattern_mask.py  test_grob_metrics.py  test_highlevel.py  test_new_pipeline.py  test_renderer.py  test_unit_resolution.py  test_units.py  (+2 more)
tutorials/: 01_cairo_basics.ipynb  02_web_interactive.ipynb  03_cairo_vs_web_comparison.ipynb
