[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grid_py"
version = "4.5.3-R4.5.3"
description = "Python port of the R grid package"
requires-python = ">=3.10"
license = "Artistic-2.0"
dependencies = [
    "numpy>=1.24",
    "pycairo>=1.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["grid_py"]

[tool.hatch.build.targets.sdist]
include = ["grid_py/", "tutorials/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
